<resources>
    <string name="app_name">FinalNoteApp</string>
    <string name="title_activity_type_phone_number_to_confirm_otp">TypePhoneNumberToConfirmOTP
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_note">Ghi chú</string>
    <string name="app_loinhac">Lời nhắc</string>
    <string name="app_taonhanmoi">Tạo nhãn mới</string>
    <string name="app_luutru">Lưu trữ</string>
    <string name="app_trashbin">Thùng rác</string>
    <string name="app_setting">Cài đặt</string>
    <string name="app_nav_drawer_open">Open navigation drawer</string>
    <string name="app_nav_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Profile">Profile</string>
    <string name="logout">Logout</string>
    <!-- Strings used for spinner for auto delete -->
    <string-array name="time">
        <item>7 ngày</item>
        <item>14 ngày</item>
        <item>30 ngày</item>
        <item>1 phút</item>
    </string-array>
    <string-array name="sound">
        <item>Rain forest</item>
        <item>Savana</item>
        <item>Australia</item>
        <item>The Artic</item>
    </string-array>
</resources>